[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/common/Tileset/Tileset.tres" type="TileSet" id=1]
[ext_resource path="res://assets/common/background-foreground/bg_1.png" type="Texture" id=2]
[ext_resource path="res://assets/common/background-foreground/bg_2.png" type="Texture" id=3]
[ext_resource path="res://assets/common/background-foreground/bg_0.png" type="Texture" id=4]
[ext_resource path="res://common/EndFlag.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/traps/spikes/spikes.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/common/Props/Waterfall.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/common/background-foreground/fg_0.png" type="Texture" id=9]
[ext_resource path="res://enemies/jumper/Jumper.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/charger/Charger.tscn" type="PackedScene" id=11]
[ext_resource path="res://common/LevelConfiig.gd" type="Script" id=12]
[ext_resource path="res://ui/common/UI.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/common/Props/bigflowers_props.png" type="Texture" id=14]
[ext_resource path="res://assets/common/Props/grass_props.png" type="Texture" id=15]
[ext_resource path="res://assets/common/Props/flowers_props.png" type="Texture" id=16]
[ext_resource path="res://assets/common/Props/drygrass_props.png" type="Texture" id=17]
[ext_resource path="res://ui/common/CountDown.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 255.365, 10 )

[node name="Level0" type="Node2D"]
script = ExtResource( 12 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 1, 0.945098, 0.835294, 1 )

[node name="background" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="bg_0" type="Sprite" parent="background"]
position = Vector2( 240.755, 159.061 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="bg_1" type="Sprite" parent="background"]
position = Vector2( 239.378, 159.325 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg_2" type="Sprite" parent="background"]
position = Vector2( 239.874, 159.342 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="background/bg_2"]
position = Vector2( -132.025, -69.6303 )
scale = Vector2( 0.5, 0.5 )
anchor_mode = 0
current = true
limit_left = -1000000
limit_top = -1000000
limit_right = 1000000
limit_smoothed = true

[node name="Traps" type="Node2D" parent="."]

[node name="spikes2" parent="Traps" instance=ExtResource( 7 )]
position = Vector2( 261.591, 186.406 )

[node name="spikes" parent="Traps" instance=ExtResource( 7 )]
position = Vector2( 218.969, 186.339 )

[node name="spikes3" parent="Traps" instance=ExtResource( 7 )]
position = Vector2( 425.566, 138.214 )

[node name="spikes4" parent="Traps" instance=ExtResource( 7 )]
position = Vector2( 233.191, 41.5888 )

[node name="Floor" type="TileMap" parent="." groups=[
"floor",
]]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65538, -65506, 0, 65537, -65505, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65538, 26, 0, 0, 27, 0, 1, 28, 0, 1, 29, 0, 1, 30, 0, 65537, 31, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 3, 65537, 0, 131073, 65538, 0, 131073, 65539, 0, 131073, 65540, 0, 131073, 65541, 0, 131073, 65542, 0, 131074, 65562, 0, 131072, 65563, 0, 131073, 65564, 0, 131073, 65565, 0, 5, 65566, 0, 65537, 65567, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65538, 131101, 0, 131072, 131102, 0, 5, 131103, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65538, 196622, 1, 0, 196623, 1, 1, 196624, 1, 1, 196625, 1, 1, 196626, 1, 2, 196638, 0, 65536, 196639, 0, 65537, 327678, 0, 65537, 327679, 0, 3, 262144, 0, 131074, 262154, 0, 0, 262155, 0, 2, 262164, 1, 0, 262165, 1, 1, 262166, 1, 2, 262174, 0, 65536, 262175, 0, 65537, 393214, 0, 65537, 393215, 0, 65538, 327690, 0, 65536, 327691, 0, 65538, 327710, 0, 65536, 327711, 0, 65537, 458750, 0, 65537, 458751, 0, 65538, 393223, 0, 0, 393224, 0, 2, 393226, 0, 65536, 393227, 0, 65538, 393246, 0, 65536, 393247, 0, 65537, 524286, 0, 65537, 524287, 0, 65538, 458758, 0, 0, 458759, 0, 131077, 458760, 0, 65538, 458762, 0, 131072, 458763, 0, 131074, 458779, 0, 0, 458780, 0, 1, 458781, 0, 1, 458782, 0, 131077, 458783, 0, 65537, 589822, 0, 65537, 589823, 0, 131075, 524289, 0, 0, 524290, 0, 2, 524293, 0, 0, 524294, 0, 131077, 524295, 0, 65537, 524296, 0, 65538, 524315, 0, 65536, 524316, 0, 65537, 524317, 0, 65537, 524318, 0, 65537, 524319, 0, 65537, 655358, 0, 65537, 655359, 0, 3, 589825, 0, 65536, 589826, 0, 131075, 589827, 0, 1, 589828, 0, 1, 589829, 0, 131077, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65538, 589850, 0, 0, 589851, 0, 131077, 589852, 0, 65537, 589853, 0, 65537, 589854, 0, 65537, 589855, 0, 65537, 720894, 0, 65537, 720895, 0, 65538, 655361, 0, 65536, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65538, 655380, 1, 0, 655381, 1, 1, 655382, 1, 1, 655383, 1, 2, 655386, 0, 131072, 655387, 0, 131073, 655388, 0, 131073, 655389, 0, 131073, 655390, 0, 5, 655391, 0, 65537, 786430, 0, 65537, 786431, 0, 65538, 720897, 0, 131072, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131074, 720926, 0, 65536, 720927, 0, 65537, 851966, 0, 65537, 851967, 0, 131075, 786444, 0, 0, 786445, 0, 1, 786446, 0, 1, 786447, 0, 1, 786448, 0, 1, 786449, 0, 1, 786450, 0, 2, 786462, 0, 65536, 786463, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851980, 0, 131072, 851981, 0, 131073, 851982, 0, 5, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65538, 851998, 0, 65536, 851999, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917518, 0, 131072, 917519, 0, 5, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65538, 917534, 0, 65536, 917535, 0, 65537, 1048574, 0, 65537, 1048575, 0, 65537, 983055, 0, 131072, 983056, 0, 5, 983057, 0, 65537, 983058, 0, 65538, 983070, 0, 65536, 983071, 0, 65537, 1114110, 0, 65537, 1114111, 0, 3, 1048592, 0, 131072, 1048593, 0, 131073, 1048594, 0, 131074, 1048606, 0, 65536, 1048607, 0, 65537, 1179646, 0, 65537, 1179647, 0, 65538, 1114142, 0, 65536, 1114143, 0, 65537, 1245182, 0, 131073, 1245183, 0, 131074, 1179678, 0, 131072, 1179679, 0, 131073, 1310718, 0, 65537, 1310719, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1376254, 0, 65537, 1376255, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1441790, 0, 65537, 1441791, 0, 65537, 1376256, 0, 65537, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537 )

[node name="EndFlag" parent="." instance=ExtResource( 5 )]
position = Vector2( 459.376, 102.018 )
scale = Vector2( 1.3, 1.3 )

[node name="Jumper" parent="." instance=ExtResource( 10 )]
position = Vector2( 347.241, 48.424 )

[node name="charger" parent="." instance=ExtResource( 11 )]
position = Vector2( 349.932, 152.699 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 62.6449, 132.351 )

[node name="Waterfall" parent="." instance=ExtResource( 8 )]

[node name="foreground" type="Node2D" parent="."]

[node name="fg_0" type="Sprite" parent="foreground"]
position = Vector2( 247.512, 103.505 )
scale = Vector2( 2.33615, 2.75471 )
texture = ExtResource( 9 )

[node name="UI" parent="." instance=ExtResource( 13 )]

[node name="Doodads" type="Node2D" parent="."]
position = Vector2( -1, 0 )

[node name="bigflowers_props" type="Sprite" parent="Doodads"]
position = Vector2( 281.819, 44.1585 )
texture = ExtResource( 14 )

[node name="flowers_props" type="Sprite" parent="Doodads"]
position = Vector2( 332.625, 59.9923 )
texture = ExtResource( 16 )

[node name="grass_props" type="Sprite" parent="Doodads"]
position = Vector2( 291.657, 188.031 )
texture = ExtResource( 15 )

[node name="grass_props2" type="Sprite" parent="Doodads"]
position = Vector2( 88.3298, 123.961 )
texture = ExtResource( 15 )

[node name="grass_props3" type="Sprite" parent="Doodads"]
position = Vector2( 375.486, 155.983 )
texture = ExtResource( 15 )

[node name="flowers_props2" type="Sprite" parent="Doodads"]
position = Vector2( 186.5, 60 )
texture = ExtResource( 16 )

[node name="drygrass_props" type="Sprite" parent="Doodads"]
position = Vector2( 440.128, 108.034 )
texture = ExtResource( 17 )

[node name="CountDown" parent="." instance=ExtResource( 18 )]
margin_left = 246.24
margin_top = 164.958
margin_right = 246.24
margin_bottom = 164.958

[node name="KillingWater" type="Area2D" parent="." groups=[
"damage",
"playable",
]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillingWater"]
position = Vector2( 238.571, 316.559 )
shape = SubResource( 1 )
