[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/common/background-foreground/bg_1.png" type="Texture" id=1]
[ext_resource path="res://assets/common/Tileset/Tileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/common/background-foreground/bg_2.png" type="Texture" id=3]
[ext_resource path="res://assets/common/background-foreground/bg_0.png" type="Texture" id=4]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/common/background-foreground/fg_0.png" type="Texture" id=6]
[ext_resource path="res://enemies/traps/spikes/spikes.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/traps/arrow_trap/arrow_trap.tscn" type="PackedScene" id=8]
[ext_resource path="res://common/EndFlag.tscn" type="PackedScene" id=9]
[ext_resource path="res://enemies/traps/arrow_trap/Lever.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/jumper/Jumper.tscn" type="PackedScene" id=11]
[ext_resource path="res://common/LevelConfiig.gd" type="Script" id=12]
[ext_resource path="res://ui/common/UI.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/common/Props/bigflowers_props.png" type="Texture" id=14]
[ext_resource path="res://assets/common/Props/grass_props.png" type="Texture" id=15]
[ext_resource path="res://assets/common/Props/flowers_props.png" type="Texture" id=16]
[ext_resource path="res://assets/common/Props/drygrass_props.png" type="Texture" id=17]
[ext_resource path="res://ui/common/CountDown.tscn" type="PackedScene" id=18]
[ext_resource path="res://enemies/shooter/Shooter.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 255.365, 10 )

[node name="Level2" type="Node2D"]
script = ExtResource( 12 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 1, 0.945098, 0.835294, 1 )

[node name="background" type="Node2D" parent="."]

[node name="bg_0" type="Sprite" parent="background"]
position = Vector2( 240.505, 159.061 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="bg_1" type="Sprite" parent="background"]
position = Vector2( 239.874, 159.436 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="bg_2" type="Sprite" parent="background"]
position = Vector2( 239.874, 159.436 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="background/bg_2"]
position = Vector2( -132.025, -69.6303 )
scale = Vector2( 0.5, 0.5 )
anchor_mode = 0
current = true
limit_left = -1000000
limit_top = -1000000
limit_right = 1000000
limit_smoothed = true

[node name="Traps" type="Node2D" parent="."]

[node name="spikes" parent="Traps" groups=[
"damage",
] instance=ExtResource( 7 )]
position = Vector2( 95.9636, 281.913 )

[node name="spikes2" parent="Traps" groups=[
"damage",
] instance=ExtResource( 7 )]
position = Vector2( 414.104, 281.86 )

[node name="spikes3" parent="Traps" groups=[
"damage",
] instance=ExtResource( 7 )]
position = Vector2( 266.435, 186.658 )

[node name="Arrow_trap_right" parent="Traps" instance=ExtResource( 8 )]
position = Vector2( 41.9662, 279.526 )
direction = "LEFT"

[node name="Arrow_trap_right2" parent="Traps" instance=ExtResource( 8 )]
position = Vector2( 473.331, 169.966 )
direction = "RIGHT"

[node name="Lever" parent="Traps" instance=ExtResource( 10 )]
position = Vector2( 97.7979, 110.084 )

[node name="Floor" type="TileMap" parent="." groups=[
"floor",
]]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, 65534, 0, 65537, 65535, 0, 65538, 10, 0, 65536, 11, 0, 65537, 12, 0, 65537, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65537, 18, 0, 65537, 19, 0, 65538, 30, 0, 65537, 31, 0, 65537, 131070, 0, 65537, 131071, 0, 65538, 65546, 0, 65536, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65538, 65566, 0, 65537, 65567, 0, 65537, 196606, 0, 65537, 196607, 0, 65538, 131082, 0, 65536, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 3, 131086, 0, 131073, 131087, 0, 131073, 131088, 0, 5, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65538, 131102, 0, 65537, 131103, 0, 65537, 262142, 0, 65537, 262143, 0, 65538, 196618, 0, 65536, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65538, 196624, 0, 65536, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65538, 196638, 0, 65537, 196639, 0, 65537, 327678, 0, 65537, 327679, 0, 65538, 262154, 0, 65536, 262155, 0, 65537, 262156, 0, 3, 262157, 0, 131074, 262160, 0, 131072, 262161, 0, 5, 262162, 0, 65537, 262163, 0, 65538, 262167, 0, 0, 262168, 0, 1, 262169, 0, 1, 262170, 0, 1, 262171, 0, 1, 262172, 0, 1, 262173, 0, 1, 262174, 0, 65537, 262175, 0, 65537, 393214, 0, 65537, 393215, 0, 131075, 327680, 0, 1, 327681, 0, 2, 327690, 0, 65536, 327691, 0, 3, 327692, 0, 131074, 327697, 0, 65536, 327698, 0, 65537, 327699, 0, 65538, 327703, 0, 131072, 327704, 0, 131073, 327705, 0, 131073, 327706, 0, 131073, 327707, 0, 131073, 327708, 0, 5, 327709, 0, 65537, 327710, 0, 65537, 327711, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65538, 393226, 0, 65536, 393227, 0, 65538, 393233, 0, 131072, 393234, 0, 5, 393235, 0, 131075, 393236, 0, 2, 393244, 0, 65536, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 131075, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 1, 458758, 0, 2, 458762, 0, 131072, 458763, 0, 131074, 458770, 0, 131072, 458771, 0, 131073, 458772, 0, 131074, 458780, 0, 131072, 458781, 0, 131073, 458782, 0, 65537, 458783, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65538, 524310, 1, 0, 524311, 1, 2, 524318, 0, 65537, 524319, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 3, 589825, 0, 131073, 589826, 0, 131073, 589827, 0, 131073, 589828, 0, 131073, 589829, 0, 131073, 589830, 0, 131074, 589850, 1, 0, 589851, 1, 1, 589852, 1, 2, 589854, 0, 65537, 589855, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65538, 655390, 0, 65537, 655391, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65538, 720919, 0, 0, 720920, 0, 2, 720926, 0, 65537, 720927, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 131075, 786433, 0, 2, 786439, 0, 0, 786440, 0, 1, 786441, 0, 1, 786442, 0, 1, 786443, 0, 2, 786448, 1, 0, 786449, 1, 1, 786450, 1, 2, 786455, 0, 65536, 786456, 0, 65537, 786457, 0, 2, 786462, 0, 65537, 786463, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65537, 851969, 0, 65538, 851975, 0, 131072, 851976, 0, 131073, 851977, 0, 131073, 851978, 0, 131073, 851979, 0, 131074, 851991, 0, 131072, 851992, 0, 131073, 851993, 0, 131075, 851994, 0, 2, 851998, 0, 65537, 851999, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65538, 917529, 0, 131072, 917530, 0, 131074, 917534, 0, 65537, 917535, 0, 65537, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 131075, 983042, 0, 1, 983043, 0, 1, 983044, 0, 2, 983069, 0, 0, 983070, 0, 65537, 983071, 0, 65537, 1114110, 0, 65537, 1114111, 0, 65537, 1048576, 0, 65537, 1048577, 0, 3, 1048578, 0, 131073, 1048579, 0, 131073, 1048580, 0, 131074, 1048605, 0, 65536, 1048606, 0, 65537, 1048607, 0, 65537, 1179646, 0, 65537, 1179647, 0, 65537, 1114112, 0, 65537, 1114113, 0, 65538, 1114139, 0, 0, 1114140, 0, 1, 1114141, 0, 131077, 1114142, 0, 65537, 1114143, 0, 65537, 1245182, 0, 65537, 1245183, 0, 65537, 1179648, 0, 65537, 1179649, 0, 65538, 1179651, 0, 0, 1179652, 0, 1, 1179653, 0, 1, 1179654, 0, 1, 1179655, 0, 2, 1179658, 0, 0, 1179659, 0, 1, 1179660, 0, 1, 1179661, 0, 1, 1179662, 0, 2, 1179665, 0, 0, 1179666, 0, 1, 1179667, 0, 1, 1179668, 0, 1, 1179669, 0, 2, 1179672, 0, 0, 1179673, 0, 1, 1179674, 0, 1, 1179675, 0, 131077, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1310718, 0, 65537, 1310719, 0, 65537, 1245184, 0, 65537, 1245185, 0, 131075, 1245187, 0, 131077, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 131075, 1245194, 0, 131077, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 131075, 1245201, 0, 131077, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65537, 1245205, 0, 131075, 1245208, 0, 131077, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1376254, 0, 65537, 1310751, 0, 65537, 1441790, 0, 65537, 1441791, 0, 65537, 1376256, 0, 65537, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537 )

[node name="Jumper" parent="Floor" instance=ExtResource( 11 )]
position = Vector2( 199.379, 275.238 )

[node name="Jumper2" parent="Floor" instance=ExtResource( 11 )]
position = Vector2( 311.218, 276.5 )

[node name="EndFlag" parent="." instance=ExtResource( 9 )]
position = Vector2( 438.37, 53.9406 )
scale = Vector2( 1.3, 1.3 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 25.298, 60.6949 )

[node name="Shooter" parent="." instance=ExtResource( 19 )]
position = Vector2( 22.1314, 184.346 )

[node name="foreground" type="Node2D" parent="."]

[node name="fg_0" type="Sprite" parent="foreground"]
position = Vector2( 242.889, 208.896 )
scale = Vector2( 2.39325, 1.40647 )
texture = ExtResource( 6 )

[node name="UI" parent="." instance=ExtResource( 13 )]
playerHearts = 3
enemiesHearts = 1

[node name="Doodads" type="Node2D" parent="."]

[node name="bigflowers_props" type="Sprite" parent="Doodads"]
position = Vector2( 182.14, 188.065 )
texture = ExtResource( 14 )

[node name="drygrass_props" type="Sprite" parent="Doodads"]
position = Vector2( 218.083, 284.014 )
texture = ExtResource( 17 )

[node name="grass_props" type="Sprite" parent="Doodads"]
position = Vector2( 61.0399, 236.012 )
texture = ExtResource( 15 )

[node name="grass_props2" type="Sprite" parent="Doodads"]
position = Vector2( 302.206, 284.025 )
texture = ExtResource( 15 )

[node name="flowers_props" type="Sprite" parent="Doodads"]
position = Vector2( 456.071, 268.029 )
texture = ExtResource( 16 )

[node name="grass_props3" type="Sprite" parent="Doodads"]
position = Vector2( 409.005, 188.03 )
texture = ExtResource( 15 )

[node name="bigflowers_props2" type="Sprite" parent="Doodads"]
position = Vector2( 383.199, 60.2601 )
texture = ExtResource( 14 )

[node name="drygrass_props2" type="Sprite" parent="Doodads"]
position = Vector2( 422.988, 140.062 )
texture = ExtResource( 17 )

[node name="drygrass_props3" type="Sprite" parent="Doodads"]
position = Vector2( 282.662, 188.024 )
texture = ExtResource( 17 )

[node name="CountDown" parent="." instance=ExtResource( 18 )]
margin_left = 234.881
margin_top = 154.045
margin_right = 234.881
margin_bottom = 154.045

[node name="KillingWater" type="Area2D" parent="." groups=[
"damage",
"playable",
]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillingWater"]
position = Vector2( 238.571, 316.559 )
shape = SubResource( 1 )
